Feature/#23 nas integration
