# backend-fap/src/files/dto/get-remove-file.dto.ts
@@ -1,0 +1,15 @@
+import { IsEnum, IsInt, IsOptional } from 'class-validator';
+import { GetRemoveEnum } from '../get-remove.enum';
+
+export class GetRemoveFileDto {
+  @IsEnum(GetRemoveEnum)
+  fileType: GetRemoveEnum;
+
+  @IsInt()
+  @IsOptional()
+  width?: number;
+
+  @IsInt()
+  @IsOptional()
+  height?: number;
+}
