# backend-fap/src/files/entities/file.entity.ts
@@ -1,0 +1,20 @@
+import { Column, PrimaryGeneratedColumn } from 'typeorm';
+import { AutoMap } from '@automapper/classes';
+
+export class File {
+  @AutoMap()
+  @PrimaryGeneratedColumn('uuid')
+  id: string;
+
+  @AutoMap()
+  @Column()
+  path?: string;
+
+  @AutoMap()
+  @Column()
+  filename?: string;
+
+  @AutoMap()
+  @Column()
+  mimetype?: string;
+}
