# backend-fap/src/files/filetype.enum.ts
@@ -1,0 +1,11 @@
+export enum FileType {
+  MOVIEFILE = 'moviefile',
+  DCPFILE = 'dcpfile',
+  PREVIEWFILE = 'previewfile',
+  TRAILERFILE = 'trailerfile',
+  STILLFILE = 'stillfile',
+  SUBTITLEFILE = 'subtitlefile',
+  BIOGRAPHY_GERMAN = 'biographyGerman',
+  BIOGRAPHY_ENGLISH = 'biographyEnglish',
+  FILMOGRAPHY = 'filmography',
+}
